readme shortened